# hackjakbrno

./: .gitignore  README.md  download_data.py  load_data.py  start.sh
.agent/rules/: create-table.md  package-manager.md
back/: .gitignore  openapi.json  pyproject.toml  requirements.txt
back/app/: database.py  evaluate.py  main.py  pipeline.py  processor.py  vector_engine.py
back/app/dto/: HealthService.py  Item.py
back/app/dto/patient/: Patient.py  PatientFuture.py  PatientHistory.py
back/app/dto/response/: DRG.py  EWS.py  HealthService.py  SuggestResult.py
back/app/dto/response/patient/: Patient.py  PatientFuture.py  PatientHistory.py
docker/: .gitignore  Dockerfile  docker-compose.yml  iris.script  merge.cpf  module.xml
docker/data/fhir/: Alisia5_Ziemann98_b177c416-9498-48f4-a1dd-86646819fe4a.json  Aurora248_Hoeger474_8db78730-55a4-4832-bfbb-9a0e749a1596.json  Lakita48_Jacobson885_b0e78a29-a35e-4cec-a06d-9b729ffe0d4e.json  Miquel905_Wolff180_85de7228-5abd-4704-8231-94f75eafea76.json  Sherry479_Spinka232_19bebb55-a4de-4bd1-b18f-0a88fa0d051a.json  Tish_Lemke_e362ce59-b198-4296-b01e-109fa6b44fe5.json  hospitalInformation1759830028660.json  practitionerInformation1759830028660.json
docker/fhirUI/: irisfhir_swagger.json
docker/misc/sql/: load_data.sql
front/: openapi-ts.config.ts  package.json  pnpm-lock.yaml  vite.config.ts
front/src/: index.css  main.tsx  routeTree.gen.ts
front/src/components/ui/: button.tsx
front/src/features/dashboard/: dashboard-page.tsx
front/src/lib/: api-client.ts
front/src/lib/api-client/: sdk.gen.ts  types.gen.ts
(+47 files in other folders)
