[project]
name = "back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.122.0",
    "uvicorn>=0.38.0",
    "sqlalchemy>=2.0.0",
    "sqlalchemy-iris",
    "sentence-transformers",
    "scikit-learn",
    "pandas",
]
