[project]
name = "back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.122.0",
    "uvicorn>=0.38.0",
    "sqlalchemy>=2.0.0",
    "sqlalchemy-iris",
    "sentence-transformers",
    "scikit-learn",
    "pandas",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "langchain>=1.1.0",
    "langchain-iris>=0.2.1",
    "langchain-openai>=1.1.0",
    "pydantic>=2.12.5",
    "langchain-core>=1.1.0",
    "langchain-text-splitters>=1.0.0",
]
